--- a/src/components/Hints/index.styl
+++ b/src/components/Hints/index.styl
@@ -1,4 +1,6 @@
+@import "../../colors.styl"
+
 .c-hints
     .header
         font-family "Josefin Sans", Helvetica, sans-serif
-        color #172B4D
+        color $primary-color
