--- a/src/components/Overview/index.styl
+++ b/src/components/Overview/index.styl
@@ -1,7 +1,9 @@
+@import "../../colors.styl"
+
 .c-overview
     .header
         font-family "Josefin Sans", Helvetica, sans-serif
-        color #172B4D
+        color $primary-color
         position relative
     .label
         padding-right 5px
