--- a/src/components/Predictions/index.styl
+++ b/src/components/Predictions/index.styl
@@ -1,10 +1,12 @@
+@import "../../colors.styl"
+
 .c-predictions
     .header
         font-family "Josefin Sans", Helvetica, sans-serif
-        color #172B4D
+        color $primary-color
 
 .c-discipline
     padding 5px 10px
     margin 5px 0
     border-radius 3px
-    border 1px solid #172B4D
+    border 1px solid $primary-color
