--- a/src/components/Profile/index.styl
+++ b/src/components/Profile/index.styl
@@ -1,3 +1,5 @@
+@import "../../colors.styl"
+
 .c-profile
     display flex
     align-items center
@@ -5,7 +7,7 @@
     h1
         margin-bottom 0.1em
         font-family "Josefin Sans", Helvetica, sans-serif
-        color #344563
+        color $secondary-color
     ul
         margin 0
         padding-left 0
@@ -20,5 +22,5 @@
         background-repeat no-repeat
         background-position center
         box-shadow 3px 3px 20px -3px gray
-        border 2px solid #0052CC
+        border 2px solid $tertiary-color
         border-radius 50%
