--- a/src/pages/Home/index.styl
+++ b/src/pages/Home/index.styl
@@ -1,9 +1,11 @@
+@import "../../colors.styl"
+
 .p-home
-    background-color #FAFBFC
-    color #42526E
+    background-color $senary-color
+    color $quarternary-color
 
     max-width 600px
     margin 50 auto
     padding 5px 20px
-    box-shadow 5px 5px 10px 0 #EBECF0
-    border 1px solid #EBECF0
+    box-shadow 5px 5px 10px 0 $quinary-color
+    border 1px solid $quinary-color
