--- a/src/colors.styl
+++ b/src/colors.styl
@@ -1,5 +1,5 @@
-$primary-color = #172B4D // headers
-$secondary-color = #344563 // name of athlete
+$primary-color = #172B4D // headers and borders
+$secondary-color = #344563 // name of athlete and tabs
 $tertiary-color = #0052CC  // borders of main photo
 $quarternary-color = #42526E // color of text
 $quinary-color = #EBECF0 // main border
