--- a/src/components/Overview/index.styl
+++ b/src/components/Overview/index.styl
@@ -15,3 +15,25 @@
         margin-top 5px
     .list-item
         margin 3px 0
+    .skillset
+        padding 10px
+        display flex
+        flex-direction row
+        flex-wrap wrap
+        justify-content space-around
+    .skill
+        display inline
+        margin 7px
+    img
+        width 80px
+        height auto
+    figcaption
+        display inline
+        position relative
+        top 20px
+        right 45px
+        font-size 18px
+    .bestSkill
+        color green
+    .worstSkill
+        color red
