Add filtering and sorting of predictions

--- a/src/components/Predictions/index.styl
+++ b/src/components/Predictions/index.styl
@@ -4,9 +4,20 @@
     .header
         font-family "Josefin Sans", Helvetica, sans-serif
         color $primary-color
+    select
+        margin 8px
+        padding 0
+        border 0
+        background-color inherit
+        font inherit
+        border 1px solid $primary-color
+        border-radius 3px
 
 .c-discipline
     padding 5px 10px
     margin 5px 0
     border-radius 3px
     border 1px solid $primary-color
+
+.score
+    float right
