Improve Predictions' design

--- a/src/components/Predictions/index.styl
+++ b/src/components/Predictions/index.styl
@@ -18,6 +18,52 @@
     margin 5px 0
     border-radius 3px
     border 1px solid $primary-color
+    height 30px
+    overflow hidden
+    position relative
+    transition all 1s ease-out
+
+.collapsed
+    height 170px
+
+.c-discipline
+    img
+        width 30px
+        height auto
+        vertical-align middle
+        margin-right 10px
+        transition inherit
+
+.collapsed
+    img
+        width 60px
+        height auto
 
 .score
+    position relative
+    top 5px
+    float right
+
+.isIndividual
+    position relative
+    top 5px
+    float right
+    margin-right 10px
+
+.tags
+    display block
+
+.scoreDrillDown
+    width 120px
+    position absolute
+    left 50%
+    top -5px
+
+.drillDownSkill
+    display block
+
+.drillDownTitle
+    font-weight bold
+
+.drillDownScore
     float right
