Add view of Hints

--- a/src/components/Hints/index.styl
+++ b/src/components/Hints/index.styl
@@ -4,3 +4,15 @@
     .header
         font-family "Josefin Sans", Helvetica, sans-serif
         color $primary-color
+
+    .content
+        display flex
+        flex-direction row
+        justify-content space-between
+
+.column
+    display flex
+    flex-direction column
+
+.hintHeader
+    font-weight bold
