Extract font from styles

--- a/src/components/Overview/index.styl
+++ b/src/components/Overview/index.styl
@@ -1,14 +1,14 @@
-@import "../../colors.styl"
+@import "../../commonStyle.styl"
 
 .c-overview
     .header
-        font-family "Josefin Sans", Helvetica, sans-serif
+        font-family $main-font
         color $primary-color
         position relative
     .label
         padding-right 5px
         font-weight bold
-        font-family "Josefin Sans", Helvetica, sans-serif
+        font-family $main-font
     .bio
         line-height: 1.4
     .bio, .skillset
