--- a/src/components/Profile/index.styl
+++ b/src/components/Profile/index.styl
@@ -1,4 +1,4 @@
-@import "../../colors.styl"
+@import "../../commonStyle.styl"
 
 .c-profile
     display flex
@@ -6,7 +6,7 @@
     padding 10px
     h1
         margin-bottom 0.1em
-        font-family "Josefin Sans", Helvetica, sans-serif
+        font-family $main-font
         color $secondary-color
     ul
         margin 0
