--- a/src/pages/Home/SwitchAthleteButtons/index.styl
+++ b/src/pages/Home/SwitchAthleteButtons/index.styl
@@ -1,4 +1,4 @@
-@import "../../../colors.styl"
+@import "../../../commonStyle.styl"
 
 .nextAthleteBtn, .prevAthleteBtn
     border none
@@ -20,7 +20,7 @@
     left 16px
     border-top 15px solid transparent
     border-bottom 15px solid transparent
-    border-left 25px solid white
+    border-left 25px solid $senary-color
 
 .nextAthleteBtn:hover, .prevAthleteBtn:hover
     background-color: $quarternary-color
