--- a/src/components/Hints/index.styl
+++ b/src/components/Hints/index.styl
@@ -1,8 +1,8 @@
-@import "../../colors.styl"
+@import "../../commonStyle.styl"
 
 .c-hints
     .header
-        font-family "Josefin Sans", Helvetica, sans-serif
+        font-family $main-font
         color $primary-color
 
     .content
