--- a/src/components/Predictions/index.styl
+++ b/src/components/Predictions/index.styl
@@ -1,8 +1,8 @@
-@import "../../colors.styl"
+@import "../../commonStyle.styl"
 
 .c-predictions
     .header
-        font-family "Josefin Sans", Helvetica, sans-serif
+        font-family $main-font
         color $primary-color
     select
         margin 8px
