Add omnipresent scroll and change main-font to header-font

--- a/src/commonStyle.styl
+++ b/src/commonStyle.styl
@@ -4,4 +4,4 @@ $tertiary-color = #0052CC  // borders of main photo
 $quarternary-color = #42526E // color of text
 $quinary-color = #EBECF0 // main border
 $senary-color = #FAFBFC // bakcground
-$main-font = "Josefin Sans", Helvetica, sans-serif
+$header-font = "Josefin Sans", Helvetica, sans-serif
