--- a/src/components/Hints/index.styl
+++ b/src/components/Hints/index.styl
@@ -2,7 +2,7 @@
 
 .c-hints
     .header
-        font-family $main-font
+        font-family $header-font
         color $primary-color
 
     .content
