--- a/src/components/Predictions/index.styl
+++ b/src/components/Predictions/index.styl
@@ -2,7 +2,7 @@
 
 .c-predictions
     .header
-        font-family $main-font
+        font-family $header-font
         color $primary-color
     select
         margin 8px
