--- a/src/components/Overview/index.styl
+++ b/src/components/Overview/index.styl
@@ -2,13 +2,13 @@
 
 .c-overview
     .header
-        font-family $main-font
+        font-family $header-font
         color $primary-color
         position relative
     .label
         padding-right 5px
         font-weight bold
-        font-family $main-font
+        font-family $header-font
     .bio
         line-height: 1.4
     .bio, .skillset
