--- a/src/components/Profile/index.styl
+++ b/src/components/Profile/index.styl
@@ -6,7 +6,7 @@
     padding 10px
     h1
         margin-bottom 0.1em
-        font-family $main-font
+        font-family $header-font
         color $secondary-color
     ul
         margin 0
