--- a/src/components/Predictions/index.styl
+++ b/src/components/Predictions/index.styl
@@ -32,7 +32,7 @@
         height auto
         vertical-align middle
         margin-right 10px
-        transition inherit
+        transition all 0.3s ease-out
 
 .collapsed
     img
